# BigOS

./: 404.html  README.md  flake.nix  index.html
About/: index.html
CMake/toolchains/: riscv64-gcc.cmake
about/: index.html
acronyms/: index.html
build_system/: index.html
build_system/targets/: index.html
contributing_rules/: index.html
docs/: acronyms.md
docs/vfs/: Create_Delete.md  Open.md  Protocol.md  Read.md  Stat.md  Walk.md  Write.md
include/debug/: panic.h
include/stdbigos/: assert.h  error.h  pstring.h  pstring_t.h  types.h
include/stdbigos/meta/: err_x_t.h
include/vfs/: fs_server_protocol.h
js/: riscvasm.js
search/: search_index.json
showcase/: index.html
src/drivers/dt/: CMakeLists.txt
src/example_dtree/: CMakeLists.txt
src/example_sbi/: CMakeLists.txt  entry.c
src/example_scheduler/: CMakeLists.txt  entry.c  linker.ld
src/example_scheduler/scheduler/: CMakeLists.txt  scheduler.c  scheduler.h
src/example_vfs/: CMakeLists.txt  entry.c
src/kernel/vfs/: CMakeLists.txt  Protocol.md  file_table.c  file_table.h  fs_server_protocol.h  mount_tree.c  mount_tree.h  pipes.c  pipes.h  server_fs.c  server_fs.h  vfs.c  vfs.h  vfs_alloc.c  vfs_alloc.h
src/lib/debug/: panic.c
src/lib/stdbigos/: error.c  pstring.c
vfs/Create_Delete/: index.html
vfs/Open/: index.html
vfs/Protocol/: index.html
vfs/Read/: index.html
vfs/Stat/: index.html
vfs/Walk/: index.html
vfs/Write/: index.html
